Integration of the conformatron engine into server and client
